# corgium

./: .gitignore  README.md  go.work  migrations.json  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
.github/workflows/: go.yml  js.yaml  main.yml  nx.yaml  python.yml
dice_master/: index.html  package.json  project.json  vite.config.ts
dice_master-e2e/: project.json
dice_master/e2e/: playwright.config.ts  project.json
dice_master/src/app/: app.spec.tsx  app.tsx  dice_master.tsx
training/: README.md
training/golang/: go.mod  golang  main  main.go  main_test.go  project.json
training/golang/pkg/leetcode/: add_two_numbers.go  palindrome.go
training/golang/tests/leetcode/: add_two_numbers_test.go  palindrome_test.go
training/js/: jest.config.ts  package-lock.json  package.json  project.json  tsconfig.json
training/jvm/: README.md  build.gradle.kts  nx.json  project.json  settings.gradle.kts
training/palindrome/: README.md
training/palindrome/golang/: main.go
training/python/: project.json  pyproject.toml  setup.py
training/python/leetcode/: dice_master.py  greatest_common_divisor.py  main.py  merge_strings_alternately.py  quest_concatenation.py  quest_lru.py  quest_max_consecutive.py  quest_shuffle.py
training/python/src/: add_two_numbers.py  palindrome.py
training/python/tests/: test_add_two_numbers.py  test_greatest_common_divisor.py  test_merge_string_alternately.py  test_palindrome.py  test_quest_concatenation.py  test_quest_lru.py  test_quest_max_consecutive.py  test_quest_shuffle.py
(+13 files in other folders)
